--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@types/node": "^20.6.2",
     "@types/react": "^18.3.20",
@@ -51,11 +53,13 @@
     "eslint-config-next": "14.1.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.344.0",
-    "next": "14.1.3",
+    "next": "^14.2.28",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.8",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -64,5 +68,12 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vaul": "^1.1.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0"
   }
 }
