--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.6.0",
-    "eslint": "8.49.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.344.0",
@@ -70,10 +70,10 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0"
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
